# tacobelly

./: README.md  pyproject.toml
data/: taco_bell_menu.csv
tacobelly/: main.py
